Simplify topics structure

--- a/mqtt-aprs.cfg.example
+++ b/mqtt-aprs.cfg.example
@@ -4,8 +4,9 @@ LOGFILE = /var/log/mqtt-aprs.log
 MQTT_HOST = 10.0.0.1
 MQTT_PORT = 1883
 MQTT_TLS = 0
-MQTT_TOPIC = /#
-MQTT_SUBTOPIC = aprs
+MQTT_TOPIC = aprs
+MQTT_SUBTOPIC = primary
+#MQTT_SUBTOPIC = fallback
 MQTT_USERNAME = 
 MQTT_PASSWORD = 
 APRS_LATITUDE = 0.00000
