--- a/mqtt-aprs.cfg.example
+++ b/mqtt-aprs.cfg.example
@@ -1,7 +1,7 @@
 [global]
 DEBUG = False
 LOGFILE = /var/log/mqtt-aprs.log
-MQTT_HOST = 10.0.0.1
+MQTT_HOST = 127.0.0.1
 MQTT_PORT = 1883
 MQTT_TLS = 0
 MQTT_TOPIC = aprs
@@ -16,5 +16,5 @@ APRS_PASSWORD = -1
 APRS_HOST = 
 APRS_PORT = 
 APRS_FILTER = 
-APRS_PROCESS = True 
-METRICUNITS = 0
+APRS_PROCESS = False
+METRICUNITS = 1
