--- a/doc/rotate.cfg
+++ b/doc/rotate.cfg
@@ -4,15 +4,16 @@ MQTT_HOST = 127.0.0.1
 MQTT_PORT = 1883
 MQTT_TLS = 0
 MQTT_TOPIC = aprs
-MQTT_SUBTOPIC = primary
+#MQTT_SUBTOPIC = primary
 #MQTT_SUBTOPIC = fallback
+MQTT_SUBTOPIC = rotate
 MQTT_USERNAME =
 MQTT_PASSWORD =
 APRS_LATITUDE = 0.00000
 APRS_LONGITUDE = 0.00000
 APRS_CALLSIGN = N0CALL
 APRS_PASSWORD = -1
-APRS_HOST =
-APRS_PORT =
+APRS_HOST = rotate.aprs2.net
+APRS_PORT = 14581
 APRS_FILTER =
 METRICUNITS = 1
