Make QoS for published messages configurable with default QoS=1

--- a/doc/rotate.cfg
+++ b/doc/rotate.cfg
@@ -9,6 +9,7 @@ MQTT_PREFIX = aprs
 MQTT_SUBTOPIC = rotate
 MQTT_USERNAME =
 MQTT_PASSWORD =
+MQTT_QOS = 1
 APRS_LATITUDE = 0.00000
 APRS_LONGITUDE = 0.00000
 APRS_CALLSIGN = N0CALL
