Replace MQTT_PREFIX with MQTT_ROOT while maintaining backward compatibility

--- a/doc/rotate.cfg
+++ b/doc/rotate.cfg
@@ -3,7 +3,7 @@ DEBUG = False
 MQTT_HOST = 127.0.0.1
 MQTT_PORT = 1883
 MQTT_TLS = 0
-MQTT_PREFIX = aprs
+MQTT_ROOT = aprs
 #MQTT_SUBTOPIC = primary
 #MQTT_SUBTOPIC = fallback
 MQTT_SUBTOPIC = rotate
